// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login redirection should redirect to home page on successful login 1`] = `
<Redirect
  push={false}
  to="/"
/>
`;

exports[`Login redirection should redirect to referrer page on successful login 1`] = `
<Redirect
  push={false}
  to="/some/page"
/>
`;

exports[`Login should display an error on unsuccessful login 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <Themed(styled.h1)>
    Operate
  </Themed(styled.h1)>
  <styled.span
    data-test-id="error-span"
  >
    Username and Password do not match
  </styled.span>
  <Themed(Styled(Input))
    name="username"
    onChange={[Function]}
    placeholder="Username"
    required={true}
    type="text"
    value=""
  />
  <Themed(Styled(Input))
    name="password"
    onChange={[Function]}
    placeholder="Password"
    required={true}
    type="password"
    value=""
  />
  <Themed(Styled(Input))
    placeholder="Password"
    type="submit"
  />
</styled.form>
`;

exports[`Login should render login form by default 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <Themed(styled.h1)>
    Operate
  </Themed(styled.h1)>
  <Themed(Styled(Input))
    name="username"
    onChange={[Function]}
    placeholder="Username"
    required={true}
    type="text"
    value=""
  />
  <Themed(Styled(Input))
    name="password"
    onChange={[Function]}
    placeholder="Password"
    required={true}
    type="password"
    value=""
  />
  <Themed(Styled(Input))
    placeholder="Password"
    type="submit"
  />
</styled.form>
`;
